--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "3",
+    "immutable": "^4.0.0-rc.12",
+    "moment": "^2.22.2",
+    "node-sass": "^4.10.0",
     "react": "^16.6.3",
+    "react-csv": "^1.0.19",
+    "react-data-grid": "^6.0.1",
+    "react-data-grid-addons": "^6.0.1",
+    "react-dates": "^18.2.2",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-with-direction": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
